force-app/main/default/objects/Cygnet_Integration_Setting__c/Cygnet_Integration_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Cygnet API: base URL and credentials. Setup &gt; Custom Settings &gt; Cygnet Integration Setting &gt; Manage.</description>
    <label>Cygnet Integration Setting</label>
</CustomObject>