force-app/main/default/objects/Cygnet_Integration_Setting__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <type>TextArea</type>
</CustomField>