force-app/main/default/objects/Cygnet_Integration_Setting__c/fields/Auth_Token_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token_Expires_At__c</fullName>
    <label>Auth Token Expires At</label>
    <type>DateTime</type>
</CustomField>