force-app/main/default/objects/Cygnet_Integration_Setting__c/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <description>Cygnet API base URL without trailing slash (e.g. https://api.example.com). Match Remote Site Settings.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>