force-app/main/default/objects/Cygnet_Integration_Setting__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Client Secret for Cygnet authenticate API (header: client-secret)</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>