force-app/main/default/objects/Cygnet_Integration_Setting__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for Cygnet authenticate API (request body)</description>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>